--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 package-lock.json
-
+.env
 # dependencies
 client/node_modules
 /node_modules
