--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.3",
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.3.16",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
