--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcrypt": "^4.0.1",
+    "boardgame.io": "^0.39.7",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
